fix: fix width broken in chrome browser

--- a/src/components/intro-background-video/styles.scss
+++ b/src/components/intro-background-video/styles.scss
@@ -2,7 +2,7 @@
 @import '../../styles/mixins';
 
 .intro-background-video-container {
-  @include size(100vw, 100vh);
+  @include size(100%, 100vh);
   position: absolute;
   video {
     width: 100%;
