--- a/src/screens/intro/styles.scss
+++ b/src/screens/intro/styles.scss
@@ -3,7 +3,7 @@
 
 
 .intro-container {
-  @include size(100vw, 100vh);
+  @include size(100%, 100vh);
   background-color: black;
     .intro-content {
     padding: 2rem 2rem 2rem 10%;
