--- a/src/screens/specialty/styles.scss
+++ b/src/screens/specialty/styles.scss
@@ -2,7 +2,7 @@
 @import '../../styles/mixins';
 
 .speciality-container {
-  @include size(100vw, fit-content);
+  @include size(100%, fit-content);
   @include flexAlignment(column);
   padding: 4rem 0 4rem 0;
   display: flex;
